--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,7 @@
   font-size: calc(10px + 2vmin);
   color: white;
   justify-content: center;
-  background-color: rgba(0, 0, 0, 0.962);
-  padding:20px;
+  background-color: #121212;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -16,15 +15,25 @@
 
 .header{
   width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  background-color: #161616;
   color:white;
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .headerBtn {
+  margin-top: 30px;
   margin-bottom: 50px;
-  margin-right: 10px;
+  margin-right: 30px;
 }
-
+h1{
+  padding-top: 10px; ;
+  padding-left: 40px ;
+  font-size:30px;
+}
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -32,12 +41,14 @@ button {
   font-size: 15px;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
-  color:white;
+  background-color: #9A9AEB;
+  color:black;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: all 0.5s ease;
 }
 
 button:hover {
-  border-color: #646cff;
+  border-color: #ffffff;
+  cursor: pointer;
+  transform: scale(1.2);
 }
