--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   justify-content: center;
 }
 
-.header{
+.header {
   width: 100%;
   height: 100px;
   display: flex;
@@ -29,11 +29,13 @@
   margin-bottom: 50px;
   margin-right: 30px;
 }
-h1{
+
+h1 {
   padding-top: 10px; ;
   padding-left: 40px ;
   font-size:30px;
 }
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -41,8 +43,8 @@ button {
   font-size: 15px;
   font-weight: 500;
   font-family: inherit;
-  background-color: #9A9AEB;
-  color:black;
+  background-color: #773193;
+  color:rgb(255, 251, 251);
   cursor: pointer;
   transition: all 0.5s ease;
 }
