--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,3 +1,9 @@
+
+
+
+
+
+
 .Card {
     backdrop-filter: blur(4px);
     border: 1px solid rgba(153, 153, 153, 0.497);
@@ -22,6 +28,21 @@
 
 .Card-header {
     margin-bottom: 20px;
+   
+    display: flex;
+    justify-content:center ;
+    width: 500px;
+}
+
+.Card-header-content{
+    
+    width: 700px;
+    padding-right: 50px;
+}
+
+.Header-edit-button{
+    padding-top: 20px;
+    width: 100px;
 }
 
 .title {
