--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,8 @@ h1 {
 
 button {
   border-radius: 8px;
+  margin-right: 10px;
+  margin-bottom: 10px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 15px;
