--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,9 +1,4 @@
 
-
-
-
-
-
 .Card {
     backdrop-filter: blur(4px);
     border: 1px solid rgba(153, 153, 153, 0.497);
@@ -45,19 +40,22 @@
 }
 
 .title {
-    font-size: 24px;
+    font-family: "Pixel";
+    font-size: 25px;
     font-weight: bold;
     margin-bottom: 10px;
 }
 
 .author {
+    font-family: "Pixel";
     font-size: 18px;
     color: #a0a5ab;
     margin-bottom: 15px;
 }
 
 .description {
-    font-size: 15px;
+    font-family: "Pixel";
+    font-size: 22px;
     text-align: center;
     margin-top: 20px;
     margin-bottom: 25px;
