--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -71,6 +71,7 @@
     transition: all 0.3s ease;
     align-self: stretch;
     margin-top: 20px;
+    font-family: "Pixel";
 }
 
 .likeButton:hover, .betButton:hover {
