--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -135,3 +135,15 @@ p {
     margin-bottom: 30px;
     margin-left: 17px;
 }
+
+.Card {animation: slideIn 1.5s ease-in-out;}
+@keyframes slideIn {
+    0% {
+        transform: translateX(-25%);
+        opacity: 0;
+    }
+    50% {
+        transform: translateX(0%);
+        opacity: 1;
+    }
+}
