--- a/src/pages/EditPost.css
+++ b/src/pages/EditPost.css
@@ -54,5 +54,22 @@ input[type=submit]:hover {
     cursor: pointer;
     transition: border-color 0.25s;
     margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.backButton {
+    width: 100%;
+    height: 50px;
+    cursor: pointer;
+    border-radius: 8px;
+    border: 1px solid transparent;
+    font-size: 20px;
+    font-weight: 500;
+    font-family: inherit;
+    background-color: #773193;
+    color: white;
+    cursor: pointer;
+    transition: border-color 0.25s;
+
     margin-bottom: 50px;
 }
