--- a/src/App.css
+++ b/src/App.css
@@ -23,21 +23,12 @@
   height: 100px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   background-color: #161616;
-  color:white;
+  color: white;
   text-align: center;
   margin-bottom: 20px;
-}
-
-.header h1{
-  font-family:"Pixel" ;
-  font-size: 35px;
-}
-
-.headerBtn {
-  margin-top: 30px;
-  margin-bottom: 50px;
-  margin-right: 30px;
+  padding: 0 10px;
 }
 
 h1 {
@@ -47,7 +38,7 @@ h1 {
 button {
   border-radius: 8px;
   margin-right: 10px;
-  margin-bottom: 10px;
+
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 20px;
@@ -70,4 +61,28 @@ button:hover {
 .nav_links{
   font-family: "Pixel";
   font-size: 16px;
+}
+
+.header h1 {
+  font-family: "Pixel";
+  font-size: 35px;
+}
+
+@media (max-width: 1370px) {
+  .header {
+    flex-direction: column;
+    height: auto;
+    padding: 20px 10px;
+  }
+
+  .header h1 {
+    font-family: "Pixel";
+    margin-bottom: 20px;
+  }
+
+  .header button {
+    font-size: 14px;
+    padding: 5px 10px;
+    margin: 5px;
+  }
 }
