Updated for Project Showcase

--- a/src/pages/EditPost.css
+++ b/src/pages/EditPost.css
@@ -76,9 +76,8 @@ input[type=submit]:hover {
 
 .comment-box {
     margin-top: 20px;
-    width: 450px;
-    max-width: 450px;
     border-radius: 8px;
+    min-width: 450px;
     border: 1px solid transparent;
     border-color: aliceblue;
     font-size: 20px;
